--- a/app/views/documentations/index.html.erb
+++ b/app/views/documentations/index.html.erb
@@ -16,7 +16,9 @@
                             <div class="panel-body">
 
                               <p id="notice"><%= notice %></p>
-                              <%= link_to new_documentation_path, {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-new', :class => "btn btn-primary"}  do %><i class="fa fa-upload"></i> New documentation<% end %>
+                              <% if current_user.admin? %>
+                                  <%= link_to new_documentation_path, {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-new', :class => "btn btn-primary"}  do %><i class="fa fa-upload"></i> New documentation<% end %>
+                              <% end %>
                               <table id="documentations" class="table table-striped table-bordered" cellspacing="0" width="100%">
                                 <thead>
                                   <tr>
@@ -26,22 +28,26 @@
                                     <th>Format</th>
                                     <th>Version</th>
                                     <th>Show</th>
-                                    <th>Edit</th>
-                                    <th>Delete</th>
+                                    <% if current_user.admin? %>
+                                      <th>Edit</th>
+                                      <th>Delete</th>
+                                    <% end %>
                                   </tr>
                                 </thead>
 
                                 <tbody>
                                     <% @documentations.each do |documentation| %>
                                     <tr>
-                                      <td width="10%"><%= documentation.process %></td>
-                                      <td width="10%"><%= documentation.doc %></td>
+                                      <td><%= documentation.process %></td>
+                                      <td><%= documentation.doc %></td>
                                       <td><%= documentation.title %></td>
-                                      <td width="5%"><%= File.extname(documentation.file.url).strip.downcase[1..-1].partition("?").first%></td>
-                                      <td width="5%">Version <%= documentation.version %></td>
-                                      <td width="4%"> <%= link_to documentation.file.url, target: "_blank", :class => "btn btn-primary" do %><i class="fa fa-search"></i><% end %></td></td>
-                                      <td width="4%"><%= link_to edit_documentation_path(documentation), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit', :class => "btn btn-default"}  do %><i class="fa fa-edit"></i><% end %></td>
-                                      <td width="4%"><%= link_to documentation_path(documentation),data: {:confirm => 'Are you sure?'}, :method => :delete, :class => "btn btn-danger", :style=>'color:#FFFFFF;' do %><i class="fa fa-trash-o"></i><% end %></td>
+                                      <td><%= File.extname(documentation.file.url).strip.downcase[1..-1].partition("?").first%></td>
+                                      <td>Version <%= documentation.version %></td>
+                                      <td width="4%"> <%= link_to documentation.file.url, target: "_blank", :class => "btn btn-primary" do %><i class="fa fa-search"> Show</i><% end %></td></td>
+                                       <% if current_user.admin? %>
+                                            <td width="4%"><%= link_to edit_documentation_path(documentation), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit', :class => "btn btn-default"}  do %><i class="fa fa-edit"></i> Edit <% end %></td>
+                                            <td width="4%"><%= link_to documentation_path(documentation),data: {:confirm => 'Are you sure?'}, :method => :delete, :class => "btn btn-danger", :style=>'color:#FFFFFF;' do %><i class="fa fa-trash-o"> Delete</i><% end %></td>
+                                        <% end %>
                                     </tr> 
 
                                     <% end %>
